# oncall

./: .gitignore  BACKLOG.md  README.md  README_ANALYSIS.md  board.yaml  governance.yaml  oncall_analysis.md  plan.yaml  pyproject.toml  state.json
.analysis/: ANALYSIS_COMPLETE.md  ANALYSIS_INDEX.md  ARCHITECTURE_DIAGRAM.txt  COMPREHENSIVE_ANALYSIS.md  CRITICAL_ISSUES_AT_A_GLANCE.txt  FINDINGS_SUMMARY.txt  QUICK_REFERENCE.md  START_HERE.md
board/: REQ-001.yaml  REQ-002.yaml  REQ-003.yaml  REQ-004.yaml  _index.yaml
concepts/: skill-eval-compatibility-matrix-platform.md
download/: oncall_agent-0.1.0-py3-none-any.whl  oncall_agent-0.2.0-py3-none-any.whl  oncall_agent-0.2.1-py3-none-any.whl  oncall_agent-0.2.2-py3-none-any.whl  oncall_agent-0.2.3-py3-none-any.whl  oncall_agent-0.2.4-py3-none-any.whl
logs/tasks/: req-001-task-1.jsonl  req-001.jsonl  req-002-task-1.jsonl  req-002.jsonl  req-003-task-1.jsonl  req-003-task-2.jsonl  req-003-task-3.jsonl  req-003-task-4.jsonl  req-003-task-5.jsonl  req-003-task-6.jsonl  req-003.jsonl  req-032-task-1.jsonl  req-032-task-2.jsonl  req-032-task-3.jsonl  req-036-task-1.jsonl  req-036-task-2.jsonl  req-036-task-3.jsonl  req-036-task-4.jsonl  req-036.jsonl  (+9 more)
oncall_agent/: __init__.py  api.py  cli.py  config.py  copilot_proxy.py  errors.py  orchestrator.py  providers.py  routing.py  trace.py  tui.py  workspace.py
oncall_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: __init__.py  test_incident.py  test_memory.py  test_parsing.py  test_sanitize.py
wiki/: eval-platform-modes.md
(+16 files in other folders)
